# rofi-reddit

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  README.md  config.toml  debug-build.sh  generate_mocks.sh  meson.build  test.sh
.github/workflows/: build.yaml
scripts/: generate_mocks.sh
src/: curl_wrappers.c  curl_wrappers.h  memory.c  memory.h  meson.build  reddit.c  reddit.h  rofi_reddit.c
subprojects/: CMock.wrap  jansson.wrap  tomlc17.wrap
subprojects/packagefiles/tomlc17/: meson.build
tests/: fixtures.c  fixtures.h  integration_test_access_token.c  meson.build  test_access_token_fetch.c  test_deserialize_listing.c  test_main.c  test_reddit.c
tests/mocks/: curl_wrappers_cmock_config.yaml
tests/mocks/curl/: curl_cmock_config.yaml
